// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{9ECD7E7F0000000000000000}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQDO9fIFoB0JNXGdpuOCTmefSIN0A3FSW7th7Sl8hvJGLpXT",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 11482n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{E2F76D870000000000000000}",
          "type": "cell",
        },
        "bounce": true,
        "from": "kQDO9fIFoB0JNXGdpuOCTmefSIN0A3FSW7th7Sl8hvJGLpXT",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 9987322000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{847B5A0100000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQDO9fIFoB0JNXGdpuOCTmefSIN0A3FSW7th7Sl8hvJGLpXT",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 7401n,
    "type": "processed",
  },
]
`;
